--- a/fr/beBold.html
+++ b/fr/beBold.html
@@ -51,16 +51,25 @@
 							<div class="inner">
 
 								<h3>Gameplay</h3>
+								<iframe 
+									width="560" 
+									height="315" 
+									src="https://www.youtube.com/embed/bro1bCSxR7w" 
+									title="YouTube video player" 
+									frameborder="0" 
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+									allowfullscreen>
+								</iframe>
 								<p>
-									*Insert video here*
+									*Vidéo prise par un coéquipier*
 									<br><br>
-									As the character moves throught the level, the player needs to shoot at obstacles and jump above
-									deadly pits to reah the end. 
+									Pendant que le personnage se déplace au travers du niveau, le joueur doit tirer les obstacles et 
+									sauter au dessus de trous mortels pour se rendre à la fin. 
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Dévelopement</h3>
 								<p>
 									J'ai travaillé sur ce jeu a un projet de synthèse pour mon diplôme universitaire. Dans une équipe de 
 									trois, nous pensions d'un concept de jeu et l'a développé en 15 semaines, divisé en phase de 
