--- a/fr/echo.html
+++ b/fr/echo.html
@@ -52,12 +52,13 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									Dans un environment inconnu, vous devez vous échapper sans être vu. Heureusement, vous avez des gens 
+									pour vous aider. Mais ils ne disent pas la même chose. À qui allez-vous faire confiance?
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Dévelopement</h3>
 								<p>
 									Il s'agit d'un projet intéressant réalisé avec une équipe multidisciplinaire composée de programmeurs 
 									et artistes (2D, 3D et musiciens) alors que j'étais à l'université. Après avoir choisi un sujet sérieux 
