--- a/fr/excessMana.html
+++ b/fr/excessMana.html
@@ -52,14 +52,21 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									Vous êtes un grand magicien (ou presque)! Explorez le terrain durant le jour pour collecter des runes 
+									afin de construire des tours défensives, parce que la nuit, vous devez protéger votre autel magique 
+									et survivez pour raconter votre histoire.
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Dévelopement</h3>
 								<p>
-									this is a Development
+									Ce fut le premier jeu créer lors d'un game-jam, et donc certaines erreurs ont été faites. Nous avons 
+									planifiés la boucle de jeu et avons visé un peu trop haut. Nous avons changé comment certains systèmes 
+									fonctionnaient trop tard and avons perdu beaucoup de temps pour les réparer. Et parce que nous 
+									n'avions pas d'artistes dans l'équipe, nous avons dû sacrifier la moitié de notre équipe pour faire 
+									les visuels et les sons. Le résultat du projet ne sont pas génial, mais l'expérience en valait la 
+									peine.
 								</p>
 
 							</div>
