--- a/fr/howDoYouLikeThemApples.html
+++ b/fr/howDoYouLikeThemApples.html
@@ -52,14 +52,19 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									Ce jeu n'est pas encore terminé, mais l'objectif final est d'avoir un gameplay semblable à 
+									<a href="https://bethesda.net/en/game/doom">Doom Eternal</a> avec un level design inspiré par 
+									l'approche rogue-like de <a href="https://www.roboquest.com/">RoboQuest</a>.
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Dévelopement</h3>
 								<p>
-									this is a Development
+									Ce jeu est mon projet personnel du moment. Le mouvement du personnage est le premier sur la liste. 
+									Puis, quelques mécaniques pour le lancer de pommes, suivis par des enemies pour être capable de jouer 
+									un peu dans un niveau. Des modèles 3D ont été acheté pour accélérer le dévelopement et avoir quelque 
+									chose de plaisant pour les yeux.
 								</p>
 
 							</div>
