--- a/fr/resistanceIsFutile.html
+++ b/fr/resistanceIsFutile.html
@@ -45,21 +45,26 @@
 					<article id="main">
 						<header>
 							<h2>Resistance Is Futile</h2>
-							<p>Turn-by-turn in Unity for a game jam</p>
+							<p>Tour par tour fait avec Unity pour un game-jam</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									Les enemies arrives en vagues de trois. Battez-vous et ammaser de l'équipement le plus longtemps 
+									possible, mais au final, la resistance est futile.
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Dévelopement</h3>
 								<p>
-									this is a Development
+									Le dévelopement de ce jeu a été fait durant un game-jam. Nous avons surplanifié pour la durée que nous 
+									avions, et avions créer des systèmes qui n'était pas efficace au niveau de l'utilité et du plaisir, 
+									comme le système d'équipement. Dû à une erreur de communication, le système de combat a été 
+									retravaillé alors que ce n'était pas nécessaire. J'ai beaucoup appris durant ce game-jam et ai mieux
+									compris comment nous aurions dû s'organiser.
 								</p>
 
 							</div>
