--- a/fr/upWeGo.html
+++ b/fr/upWeGo.html
@@ -45,21 +45,41 @@
 					<article id="main">
 						<header>
 							<h2>Up We Go</h2>
-							<p>Platformer in Unreal Engine 4</p>
+							<p>Plateformeur fait avec Unreal Engine 4</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<h3>Gameplay</h3>
+								<iframe 
+									width="560" 
+									height="315" 
+									src="https://www.youtube.com/embed/r7rTGY3_xrQ" 
+									title="YouTube video player" 
+									frameborder="0" 
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+									allowfullscreen>
+								</iframe>
 								<p>
-									This is a game
+									*Vidéo prise par un coéquipier*
+									<br><br>
+									Vous devez atteindre votre destination à tout prix. Votre but: l'arbre géant! Avec un corps 
+									inhabituel, déplacez-vous au travers des obstacles dans votre chemin pour atteindre votre objectif.
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Dévelopement</h3>
 								<p>
-									this is a Development
+									Le projet synthèse pour mon BAC. Le jeu a été planifié et créé durant un sessions de 16 semaines avec 
+									une équipe de cinq programmeurs. La phase de design c'est passé très rapidement: nous voulions un jeu 
+									basé sur la physique. Quelque chose de semblable à <a href="https://www.heavehogame.com/">Heave Ho</a> 
+									mais en 3D. nous avons donc divisé les tâches en trois: le personnage, les obstacles et le 
+									level design. Une fois que nous avions un personnage jouable et assez d'obstacles pour faire un 
+									niveau, nous avons commencez à travailler sur l'interface utilisateur et le multijoueur, et ce, 
+									jusqu'à la fin du dévelopement. Heureusement, il y a eu très peu de problèmes. Le seul « problème » 
+									que nous avons eu était plus un malentendu sur la définition d'une fonctionnalité terminé, ce qui a 
+									été réglé rapidement lors d'une rencontre.
 								</p>
 
 							</div>
