--- a/upWeGo.html
+++ b/upWeGo.html
@@ -51,7 +51,18 @@
 							<div class="inner">
 
 								<h3>Gameplay</h3>
+								<iframe 
+									width="560" 
+									height="315" 
+									src="https://www.youtube.com/embed/r7rTGY3_xrQ" 
+									title="YouTube video player" 
+									frameborder="0" 
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+									allowfullscreen>
+								</iframe>
 								<p>
+									*Video taken by a coworker*
+									<br><br>
 									You must reach your destination by all means possible. Your goal: the giant tree! With an unusual 
 									body, move across the obstacles in your way to reach your destination. 
 									
@@ -61,15 +72,15 @@
 
 								<h3>Development</h3>
 								<p>
-									As the synthesis project for my Bachelor's degree. The game was planned and created during a 
-									session of 16 weeks with a team of 5 programmers. The design phase when pretty smoothly: we wanted a 
+									The synthesis project for my Bachelor's degree. The game was planned and created during a 
+									session of 16 weeks with a team of five programmers. The design phase when pretty smoothly: we wanted a 
 									physic base game. Something like 
 									<a href="https://www.heavehogame.com/">Heave Ho</a> but 3D. So we spitted the 
 									tasks into three: the character, the level design, and the obstacles. Once we had a playable character 
 									and enough obstacles to make a level, we began working on the UI and the multiplayer part of the game 
 									until the end of our development time. Fortunatly, there was very little problems during the 
 									development. The only "problem" we had was more of a misunderstanding of our definition of completed 
-									feature. Once we all gathered to make it clear, everyting went fine.
+									feature, which was solved quickly during a meeting.
 								</p>
 
 							</div>
