--- a/beBold.html
+++ b/beBold.html
@@ -51,11 +51,20 @@
 							<div class="inner">
 
 								<h3>Gameplay</h3>
+								<iframe 
+									width="560" 
+									height="315" 
+									src="https://www.youtube.com/embed/bro1bCSxR7w" 
+									title="YouTube video player" 
+									frameborder="0" 
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+									allowfullscreen>
+								</iframe>
 								<p>
-									*Insert video here*
+									*Video taken by a coworker*
 									<br><br>
 									As the character moves throught the level, the player needs to shoot at obstacles and jump above
-									deadly pits to reah the end. 
+									deadly pits to reach the end. 
 								</p>
 
 								<hr />
