--- a/howDoYouLikeThemApples.html
+++ b/howDoYouLikeThemApples.html
@@ -61,7 +61,7 @@
 
 								<h3>Development</h3>
 								<p>
-									The game is my current personal project. The character's movement is the first to come. than a basic 
+									The game is my current personal project. The character's movement is the first to come. Than a basic 
 									apple throwing mechanic, followed by some enemies to be able to play a bit in a level. Some 3D assets 
 									were bought to speed up the development and be somewhat more pleasing to the eyes.
 
