--- a/fr/index.html
+++ b/fr/index.html
@@ -88,7 +88,7 @@
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/coming_soon.jpg" alt="" /></div><div class="content">
-							<h2><a href="fr/howDoYouLikeThemApples.html">How Do You Like Them Apples (Ongoing)</a></h2>
+							<h2><a href="fr/howDoYouLikeThemApples.html">How Do You Like Them Apples (En cours)</a></h2>
 							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements des personnages 
 								de Doom Eternal et la boucle de jeu de RoboQuest.</p>
 						</div>
