--- a/fr/beBold.html
+++ b/fr/beBold.html
@@ -45,7 +45,7 @@
 					<article id="main">
 						<header>
 							<h2>Be Bold!</h2>
-							<p>Side-scroller in Unity</p>
+							<p>Défilleur-latéral(Side-scroller) fait avec Unity</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -72,13 +72,13 @@
 								<h3>Dévelopement</h3>
 								<p>
 									J'ai travaillé sur ce jeu a un projet de synthèse pour mon diplôme universitaire. Dans une équipe de 
-									trois, nous pensions d'un concept de jeu et l'a développé en 15 semaines, divisé en phase de 
-									conception, et bronze, argent et la phase aurifère. Nous avons suivi les méthodes Agiles et pratiqué 
-									les réunions du SCRUM tous les jours. Nous avons également fait examen hebdomadaire des progrès du jeu 
+									trois, nous avons créé un concept de jeu et l'avons développé en 15 semaines, divisé en phase de 
+									conception, bronze, argent et la phase or. Nous avons suivi les méthodes Agiles et fait des réunions 
+									SCRUM à tous les jours. Nous avons également fait des révisions hebdomadaires des progrès du jeu 
 									pour parler de ce qui n'a pas fonctionné et de ce qui a été fait correctement. En plus de notre 
-									professeur qui a passé en revue notre travail, les mentors de l'industrie du jeu ont reçu plusieurs 
-									des occasions de donner des conseils au développement et au gameplay. Un de mes amis s'est joint à 
-									l'équipe à proximité la fin de la création de la musique incroyable du jeu.
+									professeur qui a passé en revue notre travail, des mentors de l'industrie du jeu ont eu plusieurs 
+									occasions de donner des conseils par rapport développement et au gameplay. Un de mes amis s'est joint à 
+									l'équipe vers la fin pour la création de la musique incroyable du jeu.
 								</p>
 
 							</div>
