--- a/fr/cv.html
+++ b/fr/cv.html
@@ -77,7 +77,7 @@
 										<li>Employé étudiant - Beneva
 											<p>Mars 2020 - Août 2020 <br>
 												- Analyser les caractéristiques existantes et, le cas échéant, définir de nouvelles solutions aux besoins des systèmes<br>
-												- Automatiser la création de l'application mobile de Beneva avec les actions GitHub<br>
+												- Automatiser la création de l'application mobile de Beneva avec les GitHub Actions<br>
 											</p>
 										</li>
 										<li>Stagiaire - Beneva
