--- a/fr/echo.html
+++ b/fr/echo.html
@@ -45,7 +45,7 @@
 					<article id="main">
 						<header>
 							<h2>Echo</h2>
-							<p>Narative driven game in Unreal Engine 4</p>
+							<p>Jeu narratif fait avec Unreal Engine 4</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -60,13 +60,13 @@
 
 								<h3>Dévelopement</h3>
 								<p>
-									Il s'agit d'un projet intéressant réalisé avec une équipe multidisciplinaire composée de programmeurs 
+									Un projet intéressant réalisé avec une équipe multidisciplinaire composée de programmeurs 
 									et artistes (2D, 3D et musiciens) alors que j'étais à l'université. Après avoir choisi un sujet sérieux 
 									pour faire un jeu, soit le concept de chambre d'écho, nous avons fait la conceptions de 3 prototypes de
 									jeu pour voir lequel a transmis le message le mieux, le meilleur étant un jeu naratif qui a fini par 
-									être Echo. Il était très intéressant de voir comment les deux professions ont vu le projet en fin de 
-									compte. différentes manières. Nous avons organisé deux réunions hebdomadaires pour suivre ce qui était 
-									fait par chacune d'elles et j'ai demandé au concepteur de jeux d'Ubisoft Saguenay d'examiner nos 
+									être Echo. Il était très intéressant de voir comment les deux professions ont vu le projet de 
+									différentes manières. Nous avons organisé deux réunions hebdomadaires pour suivre ce qui était 
+									fait par chacun et avons eu des concepteur de jeux d'Ubisoft Saguenay qui ont examinés nos 
 									concepts pour nous aider.
 								</p>
 
