--- a/fr/howDoYouLikeThemApples.html
+++ b/fr/howDoYouLikeThemApples.html
@@ -45,7 +45,7 @@
 					<article id="main">
 						<header>
 							<h2>How Do You Like Them Apples</h2>
-							<p>Doom-like in Unreal Engine 4</p>
+							<p>Projet en cours fait dans Unreal Engine 4</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
