--- a/fr/resistanceIsFutile.html
+++ b/fr/resistanceIsFutile.html
@@ -52,7 +52,7 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									Les enemies arrives en vagues de trois. Battez-vous et ammaser de l'équipement le plus longtemps 
+									Les enemies arrives en vagues de trois. Battez-vous et pillier de l'équipement le plus longtemps 
 									possible, mais au final, la resistance est futile.
 								</p>
 
