--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 					<div class="inner">
 						<header class="major">
 							<h2>About me</h2>
-							<p>I am hardworking, and I like new challenges where I can test my limits and skills.<br />
-									I am eager to learn and help my teammates or colleagues whenever I can.<br />
-									I have completed my Bachelor's degree in Video Game Development<br />
-									and I am currently looking for a job in the video game industry.
+							<p>
+								I am hardworking, and I like new challenges where I can test my limits and skills.<br />
+								I am eager to learn and help my teammates or colleagues whenever I can.<br />
+								I have completed my Bachelor's degree in Video Game Development<br />
+								and I am currently looking for a job in the video game industry.
 							</p>
 						</header>
 					</div>
