--- a/fr/excessMana.html
+++ b/fr/excessMana.html
@@ -45,7 +45,7 @@
 					<article id="main">
 						<header>
 							<h2>Excess Mana</h2>
-							<p>Tower-defense in Unity for a game jam</p>
+							<p>Défence par tour(Tower-defense) fait avec Unity pour un game jam</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
