--- a/fr/index.html
+++ b/fr/index.html
@@ -55,10 +55,11 @@
 					<div class="inner">
 						<header class="major">
 							<h2>À propos de moi</h2>
-							<p>Je travaille dur, et j'aime les nouveaux défis où je peux tester mes limites et mes compétences.<br />
+							<p>
+								Je suis travaillant, et j'aime les nouveaux défis où je peux tester mes limites et mes compétences.<br />
 								Je suis impatient d'apprendre et d'aider mes coéquipiers ou mes collègues chaque fois que je le peux.<br />
-								J'ai obtenu mom diplôme en développement de jeux vidéo<br />
-								Et je suis actuellement à la recherche d'un emploi dans l'industrie du jeu vidéo.
+								J'ai obtenu mom diplôme en développement de jeux vidéo, <br />
+								et je suis actuellement à la recherche d'un emploi dans l'industrie du jeu vidéo.
 							</p>
 						</header>
 					</div>
@@ -69,14 +70,14 @@
 						<div class="image"><img src="../images/up_we_go.png" alt="" /></div><div class="content">
 							<h2><a href="fr/upWeGo.html">Up We Go</a></h2>
 							<p>Un jeu de plateforme 3D que vous pouvez jouer en ligne avec jusqu'à 8 joueurs. 
-								Agripper et roulez dans  le niveau pour atteindre l'arbre géant.<br>
+								Agrippez-vous et roulez dans le niveau pour atteindre l'arbre géant.<br>
 							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/echo.jpg" alt="" /></div><div class="content">
 							<h2><a href="fr/echo.html">Echo</a></h2>
-							<p>Un jeu narratif avec un peu de furtivité fait dans une équipe multidisciplinaire. 
+							<p>Un jeu narratif avec un peu d'infiltration fait dans une équipe multidisciplinaire. 
 								Ce jeu sérieux vous apprend le concept d'une chambre d'écho</p>
 						</div>
 					</section>
@@ -89,7 +90,7 @@
 					<section class="spotlight">
 						<div class="image"><img src="../images/coming_soon.jpg" alt="" /></div><div class="content">
 							<h2><a href="fr/howDoYouLikeThemApples.html">How Do You Like Them Apples (En cours)</a></h2>
-							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements des personnages 
+							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements du personnage 
 								de Doom Eternal et la boucle de jeu de RoboQuest.</p>
 						</div>
 					</section>
