--- a/echo.html
+++ b/echo.html
@@ -52,21 +52,21 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									In an unknown environment, you must escape without being seen. Fortunalty, you have peoples 
-									to help you. But they are not saying the same things. Who will you trust?
+									In an unknown environment, you must escape without being seen. Fortunalty, peoples are here
+									to help you, but they are not saying the same things. Who will you trust?
 								</p>
 
 								<hr />
 
 								<h3>Development</h3>
 								<p>
-									This is an interesting project was done with a multidisciplinary team composed of programmers and
-									artists (2D, 3D and musicians) while I was at university. After picking a serious subject to make a game, 
-									which ended up being the concept of echo chamber, we tested 3 game designs to see which one
-									conveyed the message the best, the best one being a narative-driven game that ended up being Echo. 
-									It was very interesting to see how the two professions saw the project in completly 
-									different ways. We made two weekly meetings to keep track of what was being done by each one and 
-									had game designer from Ubisoft Saguenay look at our concepts to help us.
+									An interesting university project done with a multidisciplinary team composed of programmers and
+									artists (2D, 3D and musicians). After picking a serious subject to make a game, 
+									which ended up being the concept of echo chamber, we tested 3 game designs to conclude that a 
+									narrative-driven game was the best option. During the development, it was very interesting to see 
+									how the two professions had different perceptions of the project. We made two weekly meetings to 
+									keep track of the progress of each one and even had game designer from Ubisoft Saguenay look at and 
+									comment on our concepts.
 								</p>
 
 							</div>
