--- a/fr/beBold.html
+++ b/fr/beBold.html
@@ -45,7 +45,7 @@
 					<article id="main">
 						<header>
 							<h2>Be Bold!</h2>
-							<p>Défilleur-latéral(Side-scroller) fait avec Unity</p>
+							<p>Défilleur-latéral (Side-scroller) fait avec Unity</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -63,22 +63,21 @@
 								<p>
 									*Vidéo prise par un coéquipier*
 									<br><br>
-									Pendant que le personnage se déplace au travers du niveau, le joueur doit tirer les obstacles et 
-									sauter au dessus de trous mortels pour se rendre à la fin. 
+									Alors que le personnage se déplace à travers le niveau, le joueur doit viser et détruire les obstacles 
+									et éviter les trous mortels pour se rendre à la ligne d'arrivée.
 								</p>
 
 								<hr />
 
-								<h3>Dévelopement</h3>
+								<h3>Développement</h3>
 								<p>
-									J'ai travaillé sur ce jeu a un projet de synthèse pour mon diplôme universitaire. Dans une équipe de 
-									trois, nous avons créé un concept de jeu et l'avons développé en 15 semaines, divisé en phase de 
-									conception, bronze, argent et la phase or. Nous avons suivi les méthodes Agiles et fait des réunions 
-									SCRUM à tous les jours. Nous avons également fait des révisions hebdomadaires des progrès du jeu 
-									pour parler de ce qui n'a pas fonctionné et de ce qui a été fait correctement. En plus de notre 
-									professeur qui a passé en revue notre travail, des mentors de l'industrie du jeu ont eu plusieurs 
-									occasions de donner des conseils par rapport développement et au gameplay. Un de mes amis s'est joint à 
-									l'équipe vers la fin pour la création de la musique incroyable du jeu.
+									Projet de synthèse pour mon diplôme universitaire. En équipe de trois, nous avons créé un concept de 
+									jeu et l'avons développé en 15 semaines, divisé en phase de conception, bronze, argent et or. Nous 
+									avons suivi les méthodes Agiles, avons tenu des réunions SCRUM à tous les jours et avons également 
+									fait des révisions hebdomadaires des progrès du jeu. En plus de notre professeur, qui a révisé notre 
+									travail, des mentors de l'industrie du jeu ont aussi eu l'occasion de nous donner des conseils par 
+									rapport au développement et au gameplay. J'ai également pu obtenir la collaboration d'un ami pour la 
+									création de la musique qui rend le jeu encore plus incroyable!
 								</p>
 
 							</div>
