--- a/fr/cv.html
+++ b/fr/cv.html
@@ -53,7 +53,7 @@
 									<h4>Diplômes</h4>
 									<ul>
 										<li>BAC en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022</li>
-										<li>DEC en programmation, option jeu vidéo, Cégep de Ste-Foy, 2020</li>
+										<li>DEC en programmation, option jeux vidéo, Cégep de Ste-Foy, 2020</li>
 									</ul>
 									<hr />
 									<h4>Compétences</h4>
@@ -67,11 +67,11 @@
 									<h4>Expériences Professionnelles</h4>
 									<ul>
 										<li>Développeur d'application mobile - Bi Expertise
-											<p> Mai 2021 - Août 2021 et Août 2022-Maintenant <br>
+											<p> Mai 2021 - Août 2021 et Août 2022-À ce jour <br>
 												- Explorer des solutions pour conceptualiser des modèles 3D à l'aide de la photogrammétrie<br>
 												- Recherche de nouvelles technologies et de concepts utiles pour le projet en question<br>
-												- Restez à jour avec les nouvelles technologies et apprenez de nouvelles compétences sur Azure Essentials et Blender<br>
-												- Collaborer avec d'autres programmeurs, analyser les contraintes et suggérer des concepts appropriés pour différentes caractéristiques<br>
+												- Restez à jour sur les nouvelles technologies et apprendre de nouvelles compétences sur Azure Essentials et Blender<br>
+												- Collaborer avec d'autres programmeurs, analyser les contraintes et suggérer des concepts appropriés pour le problème présent<br>
 											</p>
 										</li>
 										<li>Employé étudiant - Beneva
@@ -98,7 +98,7 @@
 									<hr />
 									<h4>Langues</h4>
 									<ul>
-										<li>Français et anglais (parlé, lire, écrit)</li>
+										<li>Français et anglais (parlé, lu, écrit)</li>
 									</ul>
 									<hr />
 								</section>
