--- a/fr/echo.html
+++ b/fr/echo.html
@@ -52,22 +52,22 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									Dans un environment inconnu, vous devez vous échapper sans être vu. Heureusement, vous avez des gens 
-									pour vous aider. Mais ils ne disent pas la même chose. À qui allez-vous faire confiance?
+									Dans un environment inconnu, vous devez vous échapper sans être vu. Heureusement, des gens sont là 
+									pour vous aider, mais ils ne disent pas tous la même chose... À qui devrez-vous faire confiance?
 								</p>
 
 								<hr />
 
-								<h3>Dévelopement</h3>
+								<h3>Développement</h3>
 								<p>
-									Un projet intéressant réalisé avec une équipe multidisciplinaire composée de programmeurs 
-									et artistes (2D, 3D et musiciens) alors que j'étais à l'université. Après avoir choisi un sujet sérieux 
-									pour faire un jeu, soit le concept de chambre d'écho, nous avons fait la conceptions de 3 prototypes de
-									jeu pour voir lequel a transmis le message le mieux, le meilleur étant un jeu naratif qui a fini par 
-									être Echo. Il était très intéressant de voir comment les deux professions ont vu le projet de 
-									différentes manières. Nous avons organisé deux réunions hebdomadaires pour suivre ce qui était 
-									fait par chacun et avons eu des concepteur de jeux d'Ubisoft Saguenay qui ont examinés nos 
-									concepts pour nous aider.
+									Un projet universitaire intéressant, réalisé avec une équipe multidisciplinaire composée de programmeurs 
+									et artistes (2D, 3D et musiciens). Après avoir choisi un sujet sérieux pour faire un jeu, soit le 
+									concept de chambre d'écho, nous avons fait la conceptions de trois prototypes de jeux pour 
+									conclure que le jeu narratif était la meilleure option. Lors du développement, il était très 
+									intéressant de voir comment les deux professions avaient des perceptions différentes du projet. Nous 
+									avons organisé deux réunions hebdomadaires pour suivre le progrès de chacun, et avons 
+									même eu l'appui de concepteur de jeux d'Ubisoft Saguenay, qui ont examiné et commenté nos concepts 
+									de jeu.
 								</p>
 
 							</div>
