--- a/fr/index.html
+++ b/fr/index.html
@@ -45,7 +45,7 @@
 		<!-- Main -->
 				<section id="banner">
 					<div class="inner">
-						<h2>Antony Ménard Portofolio</h2>
+						<h2>Antony Ménard <br>Portofolio</h2>
 						<p>Présentation des projets et CV</p>
 					</div>
 					<a href="#one" class="more scrolly">En savoir plus</a>
@@ -56,11 +56,15 @@
 						<header class="major">
 							<h2>À propos de moi</h2>
 							<p>
-								Je suis travaillant, et j'aime les nouveaux défis où je peux tester mes limites et mes compétences.<br />
-								Je suis impatient d'apprendre et d'aider mes coéquipiers ou mes collègues chaque fois que je le peux.<br />
-								J'ai obtenu mom diplôme en développement de jeux vidéo, <br />
-								et je suis actuellement à la recherche d'un emploi dans l'industrie du jeu vidéo.
+								Je suis détenteur d'un diplôme en développement de jeux vidéo, et je suis actuellement à la recherche 
+								d'un emploi dans ce domaine. Je suis travaillant, et j'aime les nouveaux défis qui m'amènent à tester 
+								mes limites, mes compétences et mes connaissances. J'aime travailler dans un environnement collaboratif 
+								où je pourrai à la fois en apprendre davantage sur mon métier, et appuyer mes collègues au besoin.
 							</p>
+							<br>
+							<br>
+							<br>
+							<h2>Mes réalisations</h2>
 						</header>
 					</div>
 				</section>
@@ -68,41 +72,42 @@
 				<section id="two" class="wrapper alt style2">
 					<section class="spotlight">
 						<div class="image"><img src="../images/up_we_go.png" alt="" /></div><div class="content">
-							<h2><a href="fr/upWeGo.html">Up We Go</a></h2>
-							<p>Un jeu de plateforme 3D que vous pouvez jouer en ligne avec jusqu'à 8 joueurs. 
-								Agrippez-vous et roulez dans le niveau pour atteindre l'arbre géant.<br>
+							<h2><a href="upWeGo.html">Up We Go</a></h2>
+							<p>
+								Un jeu de plateforme 3D où jusqu'à 8 joueurs peuvent jouer en ligne simultanément. Agrippez-vous et roulez 
+								à travers le niveau pour atteindre l'arbre géant.
 							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/echo.jpg" alt="" /></div><div class="content">
-							<h2><a href="fr/echo.html">Echo</a></h2>
-							<p>Un jeu narratif avec un peu d'infiltration fait dans une équipe multidisciplinaire. 
+							<h2><a href="echo.html">Echo</a></h2>
+							<p>Un jeu narratif avec un peu d'infiltration fait avec une équipe multidisciplinaire. 
 								Ce jeu sérieux vous apprend le concept d'une chambre d'écho</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/be_bold.jpg" alt="" /></div><div class="content">
-							<h2><a href="fr/beBold.html">Be Bold!</a></h2>
+							<h2><a href="beBold.html">Be Bold!</a></h2>
 							<p>Auto-runner avec un esthétique synth-wave. Sauter et tirer pour compléter les niveaux</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/coming_soon.jpg" alt="" /></div><div class="content">
-							<h2><a href="fr/howDoYouLikeThemApples.html">How Do You Like Them Apples (En cours)</a></h2>
+							<h2><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples (En cours)</a></h2>
 							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements du personnage 
 								de Doom Eternal et la boucle de jeu de RoboQuest.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/resistance_is_futile.png" alt="" /></div><div class="content">
-							<h2><a href="fr/resistanceIsFutile.html">Resistance is futile</a></h2>
+							<h2><a href="resistanceIsFutile.html">Resistance is futile</a></h2>
 							<p>Un tour par tour avec une mécanique rpg. Combattre et piller les ennemis jusqu'à ce que mort s'en suive</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/excess_mana.png" alt="" /></div><div class="content">
-							<h2><a href="fr/excessMana.html">Excess Mana</a></h2>
+							<h2><a href="excessMana.html">Excess Mana</a></h2>
 							<p>Un tower-defense avec vu du dessus avec un peu d'exploration. 
 								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes</p>
 						</div>
@@ -113,7 +118,7 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Voici quelques informations sur mes compétences</h2>
-							<p>Pour voir tout ce que je peux faire, <a href="fr/cv.html">voir mon CV détaillé</a>
+							<p><a href="cv.html">Consultez mon CV détaillé</a>
 						</header>
 						<ul class="features">
 							<li class="icon solid fa-user-graduate">
@@ -132,6 +137,7 @@
 								<h3>Expériences Professionnelles</h3>
 								<p>
 									Développeur d'application mobile - Bi Expertise <br><br>
+									Employé étudiant - Beneva <br><br>
 									Stagiaire - Beneva
 								</p>
 							</li>
@@ -140,11 +146,12 @@
 								<p>
 									2 Bourses d'excellence universitaires<br><br>
 									Gagnant d'un prix au HackQC 2019
+									Bourse pour une immersion en anglais
 								</p>
 							</li>
 							<li class="icon solid fa-comment-dots">
 								<h3>Langues</h3>
-								<p>Français et anglais (parlé, lire, écrit)</p>
+								<p>Français et anglais (parlé, lu, écrit)</p>
 							</li>
 						</ul>
 					</div>
