--- a/fr/resistanceIsFutile.html
+++ b/fr/resistanceIsFutile.html
@@ -58,13 +58,13 @@
 
 								<hr />
 
-								<h3>Dévelopement</h3>
+								<h3>Développement</h3>
 								<p>
 									Le dévelopement de ce jeu a été fait durant un game-jam. Nous avons surplanifié pour la durée que nous 
 									avions, et avions créer des systèmes qui n'était pas efficace au niveau de l'utilité et du plaisir, 
 									comme le système d'équipement. Dû à une erreur de communication, le système de combat a été 
-									retravaillé alors que ce n'était pas nécessaire. J'ai beaucoup appris durant ce game-jam et ai mieux
-									compris comment nous aurions dû s'organiser.
+									retravaillé alors que ce n'était pas nécessaire. J'ai beaucoup appris de cette expérience, notamment 
+									sur la planification, le travail d'équipe et la résolution de problèmes. 
 								</p>
 
 							</div>
