--- a/fr/upWeGo.html
+++ b/fr/upWeGo.html
@@ -69,7 +69,7 @@
 
 								<hr />
 
-								<h3>Dévelopement</h3>
+								<h3>Développement</h3>
 								<p>
 									Le projet synthèse pour mon BAC. Le jeu a été planifié et créé durant un sessions de 16 semaines avec 
 									une équipe de cinq programmeurs. La phase de design c'est passé très rapidement: nous voulions un jeu 
@@ -77,9 +77,8 @@
 									mais en 3D. nous avons donc divisé les tâches en trois: le personnage, les obstacles et le 
 									level design. Une fois que nous avions un personnage jouable et assez d'obstacles pour faire un 
 									niveau, nous avons commencez à travailler sur l'interface utilisateur et le multijoueur, et ce, 
-									jusqu'à la fin du dévelopement. Heureusement, il y a eu très peu de problèmes. Le seul « problème » 
-									que nous avons eu était plus un malentendu sur la définition d'une fonctionnalité terminé, ce qui a 
-									été réglé rapidement lors d'une rencontre.
+									jusqu'à la fin du dévelopement. Heureusement, il y a eu très peu de problèmes, ce qui nous a permit de 
+									progressés rapidement et d'accomplis tout ce que nous voulions faire.
 								</p>
 
 							</div>
