--- a/howDoYouLikeThemApples.html
+++ b/howDoYouLikeThemApples.html
@@ -61,10 +61,9 @@
 
 								<h3>Development</h3>
 								<p>
-									The game is my current personal project. The character's movement is the first to come. Than a basic 
-									apple throwing mechanic, followed by some enemies to be able to play a bit in a level. Some 3D assets 
-									were bought to speed up the development and be somewhat more pleasing to the eyes.
-
+									The game is my current personal project. The character's movement is the first priority on the list. 
+									Than a basic apple throwing mechanic, followed by creating some enemies to be able to play a bit in a 
+									level. Some 3D assets were bought to speed up the development and be somewhat more pleasing to the eyes.
 								</p>
 
 							</div>
