--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<!-- Main -->
 				<section id="banner">
 					<div class="inner">
-						<h2>Antony Ménard Portofolio</h2>
+						<h2>Antony Ménard <br>Portofolio</h2>
 						<p>Projects showcase and CV
 						</p>
 					</div>
@@ -57,10 +57,10 @@
 						<header class="major">
 							<h2>About me</h2>
 							<p>
-								I am hardworking, and I like new challenges where I can test my limits and skills.<br />
-								I am eager to learn and help my teammates or colleagues whenever I can.<br />
-								I have completed my Bachelor's degree in Video Game Development<br />
-								and I am currently looking for a job in the video game industry.
+								I have completed my Bachelor's degree in Video Game Development and I am currently looking for a job 
+								in the video game industry. I am hardworking, and I like new challenges where I can test my limits and 
+								skills. I am eager to work in a collaborative environment, where I can continue to learn and help my 
+								colleagues whenever I can.
 							</p>
 						</header>
 					</div>
@@ -70,15 +70,16 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/up_we_go.png" alt="" /></div><div class="content">
 							<h2><a href="upWeGo.html">Up We Go</a></h2>
-							<p>A 3D platformer that you can play online with up to 8 players.
-								Grab and roll your way through the level to reach the giant tree.<br>
+							<p>
+								A 3D platformer that up to 8 players can play online simultaneously. Grab and roll your way through the 
+								level to reach the giant tree.
 							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
 							<h2><a href="echo.html">Echo</a></h2>
-							<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team.
+							<p>A narrative driven-game with a bit of stealth made with a multidisciplinary team.
 									This serious game teaches you about the concept of an echo chamber</p>
 						</div>
 					</section>
@@ -114,7 +115,7 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Here are some informations about my competences</h2>
-							<p>To see everything that I can do, <a href="cv.html">see detailed CV</a>
+							<p><a href="cv.html">See my detailed CV</a>
 						</header>
 						<ul class="features">
 							<li class="icon solid fa-user-graduate">
@@ -133,6 +134,7 @@
 								<h3>Work Experiences</h3>
 								<p>
 									Mobile App Developper - Bi Expertise <br><br>
+									Student-Employee en informatique - Beneva <br><br>
 									Intership - Beneva
 								</p>
 							</li>
@@ -140,7 +142,8 @@
 								<h3>Distinctions</h3>
 								<p>
 									2 Excellence University Scholarships <br>
-									Prize winner at HackQC 2019
+									Prize winner at HackQC 2019 <br>
+									Scholarship for an English immersion
 								</p>
 							</li>
 							<li class="icon solid fa-comment-dots">
