--- a/upWeGo.html
+++ b/upWeGo.html
@@ -70,7 +70,7 @@
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Développement</h3>
 								<p>
 									The synthesis project for my Bachelor's degree. The game was planned and created during a 
 									session of 16 weeks with a team of five programmers. The design phase when pretty smoothly: we wanted a 
@@ -79,8 +79,7 @@
 									tasks into three: the character, the level design, and the obstacles. Once we had a playable character 
 									and enough obstacles to make a level, we began working on the UI and the multiplayer part of the game 
 									until the end of our development time. Fortunatly, there was very little problems during the 
-									development. The only "problem" we had was more of a misunderstanding of our definition of completed 
-									feature, which was solved quickly during a meeting.
+									development, which allowed us to progress rapidly and accomplish all that we wanted.
 								</p>
 
 							</div>
