--- a/excessMana.html
+++ b/excessMana.html
@@ -63,9 +63,9 @@
 								<p>
 									This is the first game done during a game-jam, therefore some mistakes were made. We planned the 
 									game loop and aimed a bit too high for the scope of a game-jam. We changed how systems worked too 
-									late and wasted a lot of time trying to fix it. And because we didn't have artists, we had to 
-									spend half our working force to do the visuals and sounds. The result is not great, but the 
-									experience was worth it.
+									late and wasted a lot of time trying to fix it. I learned the importance of team versatility as we 
+									didn't have artists, we had to spend half our working force to do the visuals and sounds. The result 
+									is not great, but the experience was worth it.
 								</p>
 
 							</div>
