--- a/fr/excessMana.html
+++ b/fr/excessMana.html
@@ -45,28 +45,28 @@
 					<article id="main">
 						<header>
 							<h2>Excess Mana</h2>
-							<p>Défence par tour(Tower-defense) fait avec Unity pour un game jam</p>
+							<p>Défense par tour(Tower-defense) fait avec Unity pour un game jam</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<h3>Gameplay</h3>
 								<p>
-									Vous êtes un grand magicien (ou presque)! Explorez le terrain durant le jour pour collecter des runes 
-									afin de construire des tours défensives, parce que la nuit, vous devez protéger votre autel magique 
-									et survivez pour raconter votre histoire.
+									Vous êtes un grand magicien (ou presque)! Explorez le terrain durant le jour pour collecter des 
+									runes afin de construire des tours défensives, parce que la nuit, vous devez protéger votre autel 
+									magique et survivre pour raconter votre histoire.
 								</p>
 
 								<hr />
 
-								<h3>Dévelopement</h3>
+								<h3>Développement</h3>
 								<p>
 									Ce fut le premier jeu créer lors d'un game-jam, et donc certaines erreurs ont été faites. Nous avons 
 									planifiés la boucle de jeu et avons visé un peu trop haut. Nous avons changé comment certains systèmes 
-									fonctionnaient trop tard and avons perdu beaucoup de temps pour les réparer. Et parce que nous 
-									n'avions pas d'artistes dans l'équipe, nous avons dû sacrifier la moitié de notre équipe pour faire 
-									les visuels et les sons. Le résultat du projet ne sont pas génial, mais l'expérience en valait la 
-									peine.
+									fonctionnaient trop tard and avons perdu beaucoup de temps pour les réparer. Aussi, 
+									j'ai pu constater l'importance de la versatilité d'une équipe, car comme nous n'avions pas d'artistes 
+									parmi nous, nous avons dû sacrifier la moitié de notre équipe pour réaliser les visuels et les sons. 
+									Le résultat du projet ne sont pas génial, mais l'expérience en valait la peine.
 								</p>
 
 							</div>
