--- a/resistanceIsFutile.html
+++ b/resistanceIsFutile.html
@@ -62,8 +62,8 @@
 								<p>
 									The development of this game was made during a game-jam. We over-shot the scope of the game and 
 									created systems that were not really useful/fun, like the equipment system. Due to a communication 
-									mistake, the combat system was reworked when it was not necessary. We learned a lot during this 
-									game-jam and better understood how we should have organised.
+									mistake, the combat system was reworked when it was not necessary. I learned a lot during this 
+									game-jam, notably about planning, teamwork and problem solving.
 								</p>
 
 							</div>
